-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Beta3
-
None
-
98d65c8d423c2ff7f5ee1a511f34b111943c5a8a (qt/qtbase/dev) d8cf389d81bca2deb7256a2fe113acd8e5e70f9c (qt/qtbase/6.2)
The test fails because the event time stamp is not passed through QGraphicsSceneEvent, so the generated QMouseEvent has a default time stamp of 0. This makes the double-click detection in QGuiApplicationPrivate::processMouseEvent fail, as it is based on event timestamps.